# CodeMem

./: .gitignore  AGENT_EXPERIENCE_REDESIGN.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v0.3.0.md  CHANGELOG_v0.5.0.md  CHANGELOG_v1.1.0.md  CTR_PREDICTION.md  DEPLOYMENT_CHECKLIST.md  DISTANCE_BASED_CTR.md  DOCS.md  IMPROVEMENTS_SUMMARY.md  MCP_TEST_REPORT.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  README.md  SEARCH_RELEVANCE.md  TEST_SUMMARY.md  distance_trainer.py  export_sessions_md.py  intent_recognition.py  mcp_server.py  mcp_server_async.py  models.py  nl_formatter.py  pattern_clusterer.py  pyproject.toml  query_rewriter.py  run_all_tests.py  search_ranker.py  test_improvements_simple.py  test_integration.py  test_mcp_server.py  test_pattern_integration.py  test_phase4.py  test_phase6_1.py  test_phase6_1_features.py  tmpclaude-c833-cwd  unified_history.py  uv.toml
docs/: ARCHITECTURE.md  BM25_CACHE_DOCUMENTATION.md  BM25_FIX_SUMMARY.md  CHANGELOG.md  EXECUTIVE_SUMMARY.md  FINAL_VALIDATION_REPORT.md  MCP_TEST_PLAN.md  MCP_TEST_REPORT_CN.md  PERFORMANCE.md  QUICKSTART.md  README.md
tests/: test_final_validation.py  test_mcp_improvements.py  test_mcp_protocol.py
trash/: CHANGELOG_v0.4.0.md  ECOMMERCE_PHILOSOPHY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  context_manager.py  conversation_rank.py  ctr_model.py  feature_extractor.py  nl_formatter.py  pattern_analyzer.py  pattern_integration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4_5.py  test_phase6_1_e2e.py
