[project]
name = "codemem-mcp"
version = "0.1.3"
description = "CodeMem MCP server with dual-index BM25 search (no pandas dependency)"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "rank-bm25>=0.2.2",
  "tiktoken>=0.5.0",
]

[project.optional-dependencies]
async = [
  "aiosqlite>=0.22.0",
]

[project.scripts]
codemem-mcp = "mcp_server:main"
codemem-mcp-async = "mcp_server_async:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server", "models", "unified_history", "export_sessions_md", "test_query"]
