[project]
name = "codemem-mcp"
version = "1.1.0"
description = "CodeMem MCP server with CTR-based search ranking"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "rank-bm25>=0.2.2",
  "tiktoken>=0.5.0",
  "aiosqlite>=0.22.0",
  "mcp>=0.9.0",
]

[project.scripts]
codemem-mcp = "mcp_server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server", "models", "unified_history", "export_sessions_md", "test_query", "intent_recognition", "nl_formatter", "context_manager", "query_rewriter", "pattern_analyzer", "pattern_clusterer", "conversation_rank", "distance_trainer", "feature_extractor", "ctr_model", "search_ranker", "pattern_integration"]
